# reserva_salas

./: .dockerignore  .gitignore  .pre-commit-config.yaml  alembic.ini  base.db  docker-compose.yml  dockerfile  justfile  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 4f8431bd8b06_criando_tabelas_de_reservas_e_salas.py  4fa82975ba25_criando_as_tabelas_relacionadas_os_.py  695025a5b152_removida_a_tabela_de_tokens.py  ff6f1dbde8bd_ajustando_modelos_do_banco_de_dados_.py
nginx/: nginx.conf
src/: admin.py  app.py  auth.py  database.py  models.py  schemas.py
src/reserva_salas/: __init__.py  app.py  auth.py  bearer.py  database.py  models.py  schemas.py  settings.py
src/reserva_salas/routes/: reservas.py  salas.py  usuarios.py
src/routes/: __init__.py  reservas.py  salas.py  usuarios.py
