[project]
name = "reserva-salas"
description = "Uma API para um sistema de reserva de salas!"
readme = "README.md"
authors = [{ name = "pedro_meinen", email = "pedromeinen99@gmail.com" }]
requires-python = ">=3.12"
dynamic = ['version']
dependencies = [
    "alembic>=1.14.1",
    "environs>=14.1.1",
    "fastapi[all]>=0.115.8",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.22",
    "whenever>=0.7.1",
]

[project.scripts]
reserva-salas = "reserva_salas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "types-passlib>=1.7.7.20241221",
    "types-python-jose>=3.3.4.20240106",
]

[tool.hatch.version]
path = 'src/reserva_salas/__init__.py'
