[project]
name = "reserva-salas"
description = "Uma API para um sistema de reserva de salas!"
readme = "README.md"
authors = [{ name = "pedro_meinen", email = "pedromeinen99@gmail.com" }]
requires-python = ">=3.12"
version = '0.1.1'
dependencies = [
    "alembic>=1.14.1",
    "authx>=1.4.1",
    "environs>=14.1.1",
    "fastapi[all]>=0.115.8",
    "passlib>=1.7.4",
    "sqlmodel>=0.0.22",
    "starlette-admin>=0.14.1",
    "whenever>=0.7.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "types-passlib>=1.7.7.20241221",
]
